# ComicForge

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile.backend  Dockerfile.frontend  README.en.md  README.md  backend.spec  config.ratelimit.json  docker-compose.yml  index.html  nginx.conf  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.ts  vite.config.ts
app/: globals.css  layout.tsx  page.tsx
app/actor/: page.tsx
app/chat/: page.tsx
app/content/: page.tsx
app/help/: page.tsx
app/login/: page.tsx
app/memory/: page.tsx
app/model/: page.tsx
app/settings/: page.tsx
app/task/: page.tsx
app/test-api/: page.tsx
components/: AuthGuard.tsx  ImageDisplay.tsx  MainContent.tsx  Navigation.tsx  ProjectSelector.tsx  Sidebar.tsx  ThemeProvider.tsx  ThemeToggle.tsx
components/ui/: button.tsx  card.tsx  dropdown-menu.tsx  input.tsx
dev-dist/: sw.js
docs/: content-parser-plan.md  database-storage-plan.md  nextjs-refactor-plan.md  page-ui-design.md
lib/api/: client.ts
lib/auth/: jwt.ts  middleware.ts  password.ts
lib/db/: prisma.ts
lib/stores/: auth-store.ts  privacy-store.ts  project-store.ts  settings-store.ts  sidebar-store.ts  theme-store.ts
lib/utils/: image.ts  json.ts  novel-parser.ts  response.ts
prisma/: schema.prisma
scripts/: build-backend.ps1  dev-server.bat  dev-server.py  dev-server.sh  fix_config.py  init-admin.ts
src/: App.vue  main.ts
src/api/: __init__.py  __main__.py  index.ts  main.py  security.py
src/components/: ActorCard.vue  (+13 more)
tests/: generate_pwa_icons.py  test_chat_full.py  test_create_user.py
(+215 files in other folders)
