[project]
name = "ComicForge"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "zz", email = "zz@example.com" }
]
dependencies = [
    "aiofiles>=25.1.0",
    "civitai-py>=0.1.10",
    "docx2txt>=0.8",
    "fastapi>=0.115.0",
    "fastapi-mcp>=0.4.0",
    "httpx>=0.28.1",
    "langchain>=1.0.2",
    "langchain-community>=0.3.0",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.1",
    "langgraph>=1.0.1",
    "loguru>=0.7.3",
    "pillow>=11.3.0",
    "pydantic-settings>=2.11.0",
    "pylint>=4.0.2",
    "pytest>=8.4.2",
    "setuptools>=80.9.0",
    "sqlmodel>=0.0.27",
    "uvicorn[standard]<0.36",
]

